# sorani-gec

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  _test_out.txt  findings.txt  pyproject.toml  requirements-lock.txt  requirements.txt  temp_patch.py  test_results.txt  testout.txt  unimplemented.txt
configs/: default.yaml  laptop_smoke.yaml
data/: synthetic_test_edited.m2
scripts/: 01_collect_categorized.py  01_collect_data.py  01a_download_ahmadi_lexicon.py  01a_download_ktc.py  01b_sanitize.py  01c_balance_corpus.py  02_normalize.py  03_generate_errors.py  04_split_data.py  04a_corpus_statistics.py  05_train_baseline.py  06_train_morphaware.py  07_evaluate.py  08_ablation.py  09_export_onnx.py  10_infer.py  11_hash_data.py  12_hyperparam_search.py  13_curate_natural_testset.py  14_build_m2_gold.py  audit_splits_dryrun.py  build_m2_from_jsonl.py  collect_natural_errors.py  csv_to_natural_jsonl.py  diagnose_data.py  export_natural_csv.py  remote_resume_morphaware.sh  remote_retrain_valloss.sh  rescore_edited_subset.py  smoke_test_pipeline.py  watch_ablation.sh
src/: __init__.py
tests/: test_augmentation.py  test_baseline_model.py  test_collector.py  test_corpus_catalog.py  test_curriculum.py  test_ensemble.py  test_error_generators.py  test_evaluation.py  test_gleu_scorer.py  test_hyperparam_search.py  test_integration.py  test_inter_rater.py  test_lexicon.py  test_m2_scorer.py  test_model.py  test_morphology.py  test_normalizer.py  test_pipeline.py  test_pipeline_integration.py  test_requirements_sync.py  test_sanitizer.py  test_splitter.py  (+4 more)
(+73 files in other folders)
